# GAT

./: Fichero de Reporte.docx  Manual de uso.docx  project.json  project_test.json  project_test_1.json  subproject.json  subproject1.json  subproject2.json
App/GAT.app/Contents/: Info.plist
GAT/: CMakeLists.txt  GAT.pro  assets.qrc  customelipse.cpp  customelipse.h  fittingplane.cpp  fittingplane.h  gagraphicsview.cpp  gagraphicsview.h  mainwindow.cpp  mainwindow.ui
GAT/pcl-1.9/: pcl_config.h
GATProjects/Project/: project.json  subproject0.json  subproject1.json
GATProjects/Project0/: project.json  subproject0.json  subproject1.json
GATProjects/Project1/: project.json  subproject0.json  subproject1.json
GATProjects/Project4/: project.json  subproject0.json
GeoApp/: GeoApp.pro
GeoApp/Geolib/: Geolib.pro  geolib.cpp  geolib.h  geolib.pri  geolib_global.h  main.cpp  resources.qrc
GeoApp/Geolib/Montserrat_Ortho/: calib.txt  resultatcoord6.txt
GeoApp/GeolibTest/: GeolibTest.pri  GeolibTest.pro  tst_geolibtest.cpp
GeoApp_ver_0_1/: GeoApp_ver_0_1.pro  GeoApp_ver_0_1.pro.user.4.8-pre1  geolib.cpp  geolib.h  geolib_global.h  main.cpp  resources.qrc
GeoApp_ver_0_1/Montserrat_Ortho/: resultatblock5.txt  zoom8.jgw
Geo_GUI_Application/: CMakeLists.txt  Geo_GUI_Application.pro  Geo_GUI_Application.pro.user.9ab3dea.4.9-pre1  assets.qrc  customelipse.cpp  customelipse.h  customline.cpp  customline.h  fittingplane.cpp  fittingplane.h  gagraphicsview.cpp  gagraphicsview.h  gagraphicsview.h.autosave  mainwindow.cpp  mainwindow.h  mainwindow.ui  projectmanager.cpp  projectmanager.cpp.autosave  projectmanager.h
Metodes P150/: 3_Lectura de imatge i MDT.docx  5_Lectures de fitxers.docx  8_Calcul de parÖmetres.docx  8_Pla promig.docx  ~$Calcul de Coordenades MDT.docx  ~$Pla promig.docx
TestGeoApp/: TestGeoApp.pro  geolib.cpp  geolib.h  geolib_global.h  tst_testgeoapp.cpp
TestGeoApp/Montserrat_Ortho/: projecteMontserrat_1.txt  resultatblock3.txt  zoom9.jgw
build-GAT-Desktop_Qt_5_12_0_clang_64bit-Debug/: Makefile  moc_mainwindow.cpp  qrc_assets.cpp  ui_mainwindow.h
build-GeoApp-Desktop_Qt_5_11_2_clang_64bit-Debug/: Makefile
build-GeoApp-Desktop_Qt_5_11_2_clang_64bit-Debug/Geolib/: Makefile  libGeolib.1.0.0.dylib  libGeolib.1.0.dylib  qrc_resources.cpp
build-GeoApp-Desktop_Qt_5_11_2_clang_64bit-Debug/GeolibTest/: Makefile  tst_geolibtest.moc
build-GeoTest-Desktop_Qt_5_11_2_clang_64bit-Debug/: Makefile  target_wrapper.sh  tst_testread.moc
build-GeoTest-Desktop_Qt_5_11_2_clang_64bit-Debug/GeoTest.app/Contents/: Info.plist
build-Geo_GUI_Application-Clone_of_Desktop-Debug/: Makefile  moc_mainwindow.cpp  ui_mainwindow.h
build-Geo_GUI_Application-Clone_of_Desktop_Qt_5_12_0_clang_64bit-Debug/: Makefile  moc_gagraphicsview.cpp  moc_mainwindow.cpp  qrc_assets.cpp  subproject0.json  ui_mainwindow.h
build-Geo_GUI_Application-Clone_of_Desktop_Qt_5_12_0_clang_64bit-Release/: Makefile
build-Geo_GUI_Application-Clone_of_Desktop_Qt_5_12_0_clang_64bit-Release/Geo_GUI_Application.app/Contents/: Info.plist
build-Geo_GUI_Application-Desktop_Qt_5_12_0_clang_64bit-Debug/: .qmake.stash  CMakeCache.txt  Geo_App_Gui.cbp  Makefile  cmake_install.cmake  logFile02-06-2019.txt  moc_mainwindow.cpp  moc_mainwindow.cpp_parameters  ui_mainwindow.h
build-Geo_GUI_Application-Desktop_Qt_5_12_0_clang_64bit-Default/: CMakeCache.txt  Geo_App_Gui.cbp  Geo_GUI_Application  Makefile  cmake_install.cmake  logFile01-06-2019.txt  logFile02-06-2019.txt  logFile27-05-2019.txt  logFile29-05-2019.txt  moc_mainwindow.cpp_parameters
build-Geo_GUI_Application-Desktop_Qt_5_12_0_clang_64bit-Default/Geo_GUI_Application_autogen/: moc_predefs.h
build-Geo_GUI_Application-Desktop_Qt_5_12_0_clang_64bit-Default/Geo_GUI_Application_autogen/EWIEGA46WW/: moc_mainwindow.cpp
build-Geo_GUI_Application-Desktop_Qt_5_12_0_clang_64bit-Default/Geo_GUI_Application_autogen/include/: ui_mainwindow.h
build-Geo_GUI_Application-Desktop_Qt_5_12_0_clang_64bit-Default/mainwindow_autogen/include/: ui_mainwindow.h
build-Geo_GUI_Application-Desktop_Qt_5_12_0_clang_64bit-Release/: CMakeCache.txt  Geo_App_Gui.cbp  Geo_GUI_Application  Makefile  cmake_install.cmake  logFile02-06-2019.txt
build-Geo_GUI_Application-Desktop_Qt_5_12_3_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  logFile20-05-2019.txt  ui_mainwindow.h
build-Geo_GUI_Application-Desktop_Qt_5_12_3_MinGW_64_bit-Debug/debug/: moc_mainwindow.cpp  qrc_assets.cpp
build-Geo_GUI_Application-Desktop_Qt_5_12_3_MinGW_64_bit-Release/: Makefile  Makefile.Debug  Makefile.Release  logFile.txt  logFile04-05-2019.txt  logFile20-05-2019.txt  ui_mainwindow.h
build-Geo_GUI_Application-Desktop_Qt_5_12_3_MinGW_64_bit-Release/release/: logFile04-05-2019.txt  moc_mainwindow.cpp
docs/: OpenFileSD.txt  SequenceDiagram.txt
docs/Metodes P150/: 1_Lectura del projecte.docx  2_Lectura de MDT.docx  4_Dibuix de l'stereoplot.docx  6_Digitalitzacio_i_obtencio de coordenades.docx  7_Calcul de Coordenades MDT.docx
docs/Montserrat_Ortho/: 281116a.tfw  281116b.tfw  281116c.tfw  281116d.tfw  resultatblock6.txt  resultatcoord3.txt
(+49 files in other folders)
